kubernetes/invidious/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invidious
spec:
  replicas: 1
  template:
    spec:
      nodeSelector:
        # https://github.com/iv-org/invidious/issues/2648
        kubernetes.io/arch: amd64
      containers:
      - name: invidious
        image: invidious
        ports:
        - containerPort: 3000
          protocol: TCP
      - name: companion
        image: invidious-companion
        volumeMounts:
        - mountPath: /var/tmp/youtubei.js
          name: companioncache
      volumes:
      - name: companioncache
        emptyDir: {}
