kubernetes/invidious/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invidious
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
